# oglplayground

./: .gitignore  CMakeLists.txt  README.md  api.cpp  api.h  debug.h  enum.h  glfw.external_project.txt  main.cpp  program.cpp  program.h  res_path.h.in  simple.frag  simple.vert
include/glad/: glad.h
src/: application.cpp  application.h  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  geometry.cpp  geometry.h  main.cpp  noncopyable.h  program.cpp  program.h  resources_path.h.in  transform.cpp  transform.h
src/oglplayground/: CmakeLists.txt
src/oglplayground/include/oglplayground/: bufferobject.h  debug.h  program.h  transform.h
src/oglplayground/src/: bufferobject.cpp  camera.cpp  debug.cpp  geometry.cpp  glad.c  program.cpp  transform.cpp
src/oglplayground/tests/: CMakeLists.txt
src/oglplayground/tests/src/: test_transform.cpp
src/testapp/: CMakeLists.txt
src/testapp/resources/: fullscreen.frag.glsl  fullscreen.vert.glsl  simple.vert.glsl
src/testapp/src/: application.cpp  application.h  gameoflifebehavior.cpp  gameoflifebehavior.h  main.cpp  resources_path.cpp.in  resources_path.h  resources_path.h.in  sphericalcontroller.cpp  sphericalcontroller.h  testbehavior.cpp  testbehavior.h
